# Merdog

./: .gitignore  CMakeLists.txt  Cmakelists.txt  LICENSE  ReadMe.md  cpp_merdog_them.cpp  cpp_merdog_theme.cpp
Merdog2.0/: clang-make.bat  make.bat
Merdog2.0/include/: block.hpp  branch_statement.hpp  environment.hpp  error.hpp  expr.hpp  function.hpp  if.hpp  interpreter.hpp  lexer.hpp  loop_statement.hpp  memory.hpp  namespace.hpp  parser.hpp  parser_node.hpp  sym.hpp  system_call.hpp  type.hpp  value.hpp  var.hpp  word_record.hpp
Merdog2.0/source/: block.cpp  branch_statement.cpp  environment.cpp  error.cpp  expr.cpp  function.cpp  if.cpp  lexer.cpp  loop_statement.cpp  main.cpp  memory.cpp  parser.cpp  (+5 more)
dlheaders/: merlib.h  test.cpp
doc/: what's new.txt
docs/: ReadMe_CN.md  update_log.md
example/: array.mer  auto_test.bat  demo.mer  draw .mer  draw_heart_shape.mer  draw_sin.mer  draw_sin2.mer  fact.mer  function_reload.mer  insertion_sort.mer  member_function_test.mer  member_manager.mer  muldarray_test.mer  pointer_test.mer  random_test.mer  shared_obj.mer  struct1.mer  struct_arr.mer  switch_test.mer  test.bat  vector1.mer
include/: basic_objects.hpp  environment.hpp  error.hpp  expression.hpp  function.hpp  lexer.hpp  namespace.hpp  shared_object.hpp  statement.hpp  value.hpp  word_record.hpp
interpreter/: clang-make.bat
merdog/: clang-make.bat  make.bat
old/: clang-make.bat
output/: lex_tst.meg
source/: environment.cpp  lexer.cpp  main.cpp  merdog  namespace.cpp  parser.cpp  shared_object.cpp  type.cpp
sources/: expression.cpp  main.cpp
(+285 files in other folders)
